--- a/AngularAssignment-Coffe/src/app/app.component.html
+++ b/AngularAssignment-Coffe/src/app/app.component.html
@@ -1,3 +1,15 @@
 <div>
   <app-coffes></app-coffes>
 </div>
+<div class="layout-footer">
+  <div class="layout-footer-left">
+    <span>Mohamed Amine Slimani </span>
+  </div>
+  <div class="layout-footer-right">
+    <a
+      href="https://github.com/MedAmineSlimani/AngularAssignment"
+      class="p-mr-3"
+      ><i class="pi pi-github"></i
+    ></a>
+  </div>
+</div>
