--- a/AngularAssignment-Coffee/src/app/app.component.html
+++ b/AngularAssignment-Coffee/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-coffes></app-coffes>
+  <app-coffees></app-coffees>
 </div>
 <div class="layout-footer">
   <div class="layout-footer-left">
