--- a/AngularAssignment-Coffee/src/app/app.component.html
+++ b/AngularAssignment-Coffee/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div>
-  <app-coffees></app-coffees>
-</div>
+<router-outlet></router-outlet>
 <div class="layout-footer">
   <div class="layout-footer-left">
     <span>Mohamed Amine Slimani </span>
